Fix styling issues on mobile

--- a/static/sass/app/basics/_offcanvas.scss
+++ b/static/sass/app/basics/_offcanvas.scss
@@ -7,6 +7,7 @@ $large: layout(12);
 .offcanvasMain {
   @include span(full at 1 isolate);
   background: $white;
+  position: relative;
 }
 
 @media (max-width: $tablet) {
